# closecity-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.rst  conf.py  getting_started.md  getting_started.rst  index.rst  installation.rst  token_use.md
docs/_static/: custom.css
docs/tutorials/: amenity_basket.md  amenity_basket.rst  competitor_walksheds.md  competitor_walksheds.rst  first_map.md  home_search.md  home_search.rst  index.rst
src/closecity/: __init__.py  client.py  errors.py  map.py  spatial.py  tabular.py
tests/: test_client.py  test_map.py  test_spatial.py  test_tabular.py
