[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "closecity"
version = "1.0.0"
description = "Python client for the Close API (api.close.city). Travel times to points of interest for every US census block."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nathaniel Henry", email = "nat@henryspatialanalysis.com" }]
keywords = ["close", "travel-time", "isochrone", "census", "accessibility", "gis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = ["httpx>=0.27", "geopandas>=0.14"]

[project.urls]
Homepage = "https://close.city"
Documentation = "https://henryspatialanalysis.github.io/closecity-python/"
Repository = "https://github.com/henryspatialanalysis/closecity-python"
Issues = "https://github.com/henryspatialanalysis/closecity-python/issues"
API = "https://api.close.city"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Only needed to auto-download census-block boundaries (blocks map by default).
tiger = ["pygris"]
# Building the Sphinx documentation site.
docs = ["sphinx>=7", "furo", "sphinx-copybutton"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
# House style: spaces around '=' in keyword args and defaults.
ignore = ["E251", "E252"]
