[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "closecity"
version = "1.1.0"
description = "Python client for the Close API (api.close.city). Travel times to points of interest for every US census block."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nathaniel Henry", email = "nat@henryspatialanalysis.com" }]
keywords = ["close", "travel-time", "isochrone", "census", "accessibility", "gis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = ["httpx>=0.27", "pandas>=1.5", "geopandas>=0.14"]

[project.urls]
Homepage = "https://close.city"
Documentation = "https://henryspatialanalysis.github.io/closecity-python/"
Repository = "https://github.com/henryspatialanalysis/closecity-python"
Issues = "https://github.com/henryspatialanalysis/closecity-python/issues"
API = "https://api.close.city"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Only needed to auto-download census-block boundaries (blocks map by default).
tiger = ["pygris"]
# Building the Sphinx documentation site. myst-nb runs the tutorial notebooks;
# matplotlib draws the maps; pygris downloads block boundaries during execution.
docs = ["sphinx>=7", "furo", "sphinx-copybutton", "myst-nb", "jupytext",
        "matplotlib", "pygris"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
# House style: spaces around '=' in keyword args and defaults (E251/E252). Do NOT
# run `ruff format` here; it strips those spaces. Lint only with `ruff check`.
ignore = ["E251", "E252"]

[tool.ruff.lint.per-file-ignores]
# `Point` is the shapely class passed around and called as a constructor; the
# uppercase name is deliberate (like sklearn's X), so allow it here.
"src/closecity/spatial.py" = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"
